# klip

./: .gitignore  README.md  klip.py  release.sh
admin-web/: bridge-contract.d.ts  index.html
docs/: STATUS.md  design.md  plan.md
dotnet/: ARCHITECTURE.md  Klip.slnx  PORT.md
dotnet/Klip.Admin/: App.axaml  App.axaml.cs  Klip.Admin.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
dotnet/Klip.App/: App.axaml  App.axaml.cs  ClipboardImage.cs  Complaints.cs  Klip.App.csproj  MainWindow.Blender.cs  MainWindow.ChatImages.cs  MainWindow.Colors.cs  MainWindow.Daw.cs  MainWindow.Gizmo.cs  MainWindow.Gradient.cs  MainWindow.MeshEdit.cs  MainWindow.MeshOps.cs  MainWindow.Panel3D.cs  MainWindow.Rive.cs  (+13 more)
landing/: index.html  llms.txt  receita.html  vercel.json  version.json
pc/: pyproject.toml  requirements.txt
pc/src/klip/: __init__.py  app.py  main.py
pc/src/klip/ai/: bg_remover.py
pc/src/klip/canvas/: handles.py  scene.py  view.py
pc/src/klip/color/: extractor.py  picker.py
pc/src/klip/document/: document.py  io.py  schema.py
pc/src/klip/document/items/: base.py  image_item.py  shape_item.py  text_item.py
pc/src/klip/export/: exporter.py
pc/src/klip/fonts/: installer.py
pc/src/klip/panels/: layers_panel.py  pages_panel.py
pc/src/klip/toolbar/: toolbar.py
pc/src/klip/undo/: commands.py
pc/tests/: test_app_smoke.py  test_color.py  test_document.py  test_export.py  test_fonts.py  test_image_import.py  test_io.py  test_items.py  test_panels.py  test_scene.py  test_schema.py  test_toolbar.py  test_toolbar_wiring.py  test_undo.py
(+105 files in other folders)
