[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klip"
version = "0.1.0"
description = "Canva-style design app for Windows"
requires-python = ">=3.9"
authors = [{ name = "Leonel Ferreira" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
